Fix accordeon borders when (un-)collapsing

--- a/src/control_elements/css/accordion.css
+++ b/src/control_elements/css/accordion.css
@@ -11,6 +11,10 @@
   padding: 5px;
 }
 
+.accordion-collapsed .accordion-header {
+  border-radius: 6px;
+}
+
 .accordion-header::after {
   content: '-';
 }
